--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-  "lang": "en-us",
-  "name": "Temperature converter app",
-  "short_name": "Temperature converter",
-  "description": "A basic temperature converter application that can convert to and from Celsius, Kelvin, and Fahrenheit",
+  "lang": "en-gb",
+  "name": "JavaScript Flashcards",
+  "short_name": "Flashcards.js",
+  "description": "Randomly generated JavaScript flashcards",
   "start_url": "/",
-  "background_color": "#2f3d58",
-  "theme_color": "#2f3d58",
-  "orientation": "any",
+  "background_color": "#dc555c",
+  "theme_color": "#dc555c",
+  "orientation": "portrait",
   "display": "standalone",
   "icons": [
     {
-      "src": "/icon512.png",
+      "src": "/appicon.png",
       "sizes": "512x512"
     }
   ]
