--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "short_name": "Flashcards.js",
   "description": "Randomly generated JavaScript flashcards",
   "start_url": "/",
-  "background_color": "#1b1718",
-  "theme_color": "#1b1718",
+  "background_color": "#18191B",
+  "theme_color": "#18191B",
   "orientation": "portrait",
   "display": "standalone",
   "icons": [
