--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "lang": "en-gb",
-  "name": "JavaScript Flashcards",
-  "short_name": "Flashcards.js",
-  "description": "Randomly generated JavaScript flashcards",
+  "name": "Web Dev Flashcards",
+  "short_name": "Flashcards",
+  "description": "Randomly generated Web Dev flashcards",
   "start_url": "/",
   "background_color": "#18191B",
   "theme_color": "#18191B",
